# entrega-multiagents

./: .env.example  .gitignore  PLANO_DE_EXECUCAO.md  README.md  pyproject.toml
.claude/: CLAUDE.md
docs/: architecture.md  code-style.md  decisions.md  patterns.md  progress.md
notebooks/: 01_market_data_and_indicators.ipynb  02_sentiment_analysis.ipynb  04_backtest_and_evaluation.ipynb  05_demo.ipynb
notebooks/data/: backtest_results.csv  backtest_results_gdelt.csv  recommendations.csv
scripts/: run_backtest_gdelt.py  test_agent.py  test_backtest_sanity.py  test_expansion.py  test_gdelt.py  test_llm.py
src/quantumfinance/: config.py  universe.py
src/quantumfinance/agents/: context_router_agent.py  decision_agent.py  diagnostic_agent.py  market_agent.py  orchestrator.py  sentiment_agent.py
src/quantumfinance/app/: gradio_app.py
src/quantumfinance/backtesting/: metrics.py  strategy.py
src/quantumfinance/context/: context_map.yaml  router.py
src/quantumfinance/data/: gdelt_client.py  market_data.py  news_data.py
src/quantumfinance/features/: sentiment.py  targets.py  technical.py
src/quantumfinance/output/: storage.py
src/quantumfinance/tools/: context_tools.py  decision_tools.py  market_tools.py  news_tools.py
tests/: test_context_router.py  test_output.py  test_recommendation.py  test_sentiment.py  test_technical.py
